Attempt fix of desktop layout for admin-create-account.html. Bug exists where extra space underneath form and welcome div for no reason

--- a/views/styles/admin-add-account.css
+++ b/views/styles/admin-add-account.css
@@ -1,12 +1,8 @@
 #content {
     display: grid;
-    grid-template-rows: 100px 1fr;
+    min-height: 100%;
+    grid-template-rows: 50px auto;
     grid-template-columns: 30% 70%;
-}
-
-#dashboard-title {
-    font-size: 2rem;
-    text-align: center;
 }
 
 .dashboard-header {
@@ -15,19 +11,24 @@
     background-color: var(--primary-text);
 }
 
+#dashboard-title {
+    font-size: 2rem;
+    text-align: center;
+    margin: 5px auto;
+}
+
 #welcome {
-    grid-column: 1 / span 1;
     grid-row: 2 / span 1;
+    grid-column: 1 / span 1;
     background-color: var(--primary-light);
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 #welcome h1 {
     color: white;
-    text-align: center;
 }
 
 #welcome p {
@@ -39,6 +40,7 @@
     grid-row: 2 / span 1;
     margin-left: auto;
     margin-right: auto;
+    height: 100%;
     min-width: 380px;
     width: 70%;
 }
